2011-08-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/ds390/Makefile.in: added gptr_cmp.rel

2011-08-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/stdbool.h,
	  support/regression/tests/bool.c:
	  Fixed bug #2939485.

2011-08-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/ds390/gptr_cmp.c: new, added
	* src/ds390/gen.c (loadDptrFromOperand): factored out,
	  (genFarPointerGet, genCodePointerGet, genGenPointerGet, genFarPointerSet,
	   genGenPointerSet): use loadDptrFromOperand
	  (genCmp, gencjneshort): fixed generic pointer comparison
	* support/regression/tests/genptrs.c: expanded and enabled tests for ds390

2011-08-28 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c:
	  applied patch #3285611: Workaround gcc 4.6.0 bug with sdcc 3.0.0,
	  thanks Roy Rankin
	* support/cpp/libiberty/concat.c, support/cpp/libiberty/filenames.h,
	  support/cpp/libiberty/hashtab.c, support/cpp/libiberty/vasprintf.c,
	  support/cpp/libiberty/xmemdup.c, support/cpp/libiberty/hashtab.h,
	  support/cpp/libiberty/splay-tree.c, support/cpp/libiberty/lbasename.c,
	  support/cpp/libiberty/splay-tree.h, support/cpp/libiberty/getpwd.c,
	  support/cpp/libiberty/fopen_unlocked.c, support/cpp/libcpp/directives.c,
	  support/cpp/libcpp/macro.c, support/cpp/libcpp/files.c,
	  support/cpp/libcpp/include/cpplib.h, support/cpp/libcpp/include/symtab.h,
	  support/cpp/libcpp/include/line-map.h, support/cpp/libcpp/init.c,
	  support/cpp/libcpp/errors.c, support/cpp/libcpp/expr.c,
	  support/cpp/libcpp/internal.h, support/cpp/libcpp/lex.c,
	  support/cpp/libcpp/system.h, support/cpp/libcpp/charset.c,
	  support/cpp/sdcpp-diagnostic.c, support/cpp/sdcpp.h,
	  support/cpp/sdcpp-opts.c:
	  SDCPP synchronized with GCC CPP release version 4.6.1

2011-08-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  support/regression/tests/bool.c:
	  Fixed bug #3031197.
