@@ -107,6 +107,15 @@ getpwd (void)
 
 #else	/* VMS || _WIN32 && !__CYGWIN__ */
 
+#if defined(_WIN32)
+#if defined(__BORLANDC__)
+#include <dir.h>
+#else
+#include <direct.h>
+#define getcwd  _getcwd
+#endif
+#endif
+
 #ifndef MAXPATHLEN
 #define MAXPATHLEN 255
 #endif
